--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.35.0",
     "canvas-confetti": "^1.9.4",
     "firebase": "^12.8.0",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
