--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.35.0",
     "canvas-confetti": "^1.9.4",
+    "dotenv": "^17.2.4",
     "firebase": "^12.8.0",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.562.0",
